--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Julia's blog</title>
   </head>
-  <h1> Hi this is my life in a blog </h1>
+  <h1> this is my life in a blog </h1>
 <h3>even smaller headline</h3>
 <p>this the paragraph about my life</p>
   <body>
