--- a/index.html
+++ b/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Julia's blog</title>
-  </head>
-  <h1> this is my life in a blog </h1>
-<h3>even smaller headline</h3>
-<p>this the paragraph about my life</p>
-  <body>
-<p>the <strong> text bold</strong></p>
-<p><em>my life is kind of a mess!!</em></p>
-my life is <strong><em>kind of a mess</em></strong>
 
-<hr>
+<head>
+  <meta charset="utf-8">
+  <title>Julia's blog</title>
+  <style>
+    body {
+      background:#0FA3B1;
+      color: #F7A072;}
 
-<p>this is <a href="https://www.pexels.com">link </a>
-  </body>
+      p {color: magenta;}
+
+      .bob {color: black; font-size: 50px;}
+  </style>
+</head>
+
+<body>
+  <p><a href="text.html">My text page</a></p>
+  <p><a href="index.html">My index page</a></p>
+  <p><a href="box.html">My box page</a></p>
+  <h1> Hi my name is Julia and this is my life (in a blog) </h1>
+  <h3>My life is kind of a mess</h3>
+  <p>but I make the best of it and try to stay postive </p>
+
+  <p>the <strong> <span class="bob">text</span> bold</strong></p>
+  <p><em>my life is kind of a mess!!</em></p>
+  my life is <strong><em>kind of a mess</em></strong>
+
+  <hr>
+
+  <p>this is <a href="https://www.pexels.com">link </a>
+    <img src="woods.jpeg" alt="guy in the woods">
+</body>
+
 </html>
