--- a/index.html
+++ b/index.html
@@ -4,33 +4,59 @@
 <head>
   <meta charset="utf-8">
   <title>Julia's blog</title>
+  <<link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
+
   <style>
     body {
-      background:#0FA3B1;
-      color: #F7A072;}
+      background:#fedcba;
+      color: #F7A072;
+      font-family: 'Special Elite', cursive;}
 
-      p {color: magenta;}
+      p {color: #F7A072;}
 
       .bob {color: black; font-size: 50px;}
+
+      ul  {list-style-type: none;
+      margin:0;
+    padding:0;
+  }
+
+  a{
+    color:#F7A072;
+    text-decoration:none;
+    display:block;
+    background:#fedcba;
+    width:140px;
+    height: 20px;
+    margin:20px;
+    padding: 10px;
+    text-align: center;
+    border-radius:20px;
+    border:1px solid #667
+ }
+
+  a:hover{
+    box-shadow:3px 3px 3px #667
+  }
+
   </style>
 </head>
 
 <body>
-  <p><a href="text.html">My text page</a></p>
-  <p><a href="index.html">My index page</a></p>
-  <p><a href="box.html">My box page</a></p>
+  <ul>
+    <li><a href="text.html">My text page</a></li>
+      <li><a href="index.html">My index page</a></li>
+      <li><a href="box.html">My box page</a></li>
+  </ul>
+
   <h1> Hi my name is Julia and this is my life (in a blog) </h1>
   <h3>My life is kind of a mess</h3>
   <p>but I make the best of it and try to stay postive </p>
 
-  <p>the <strong> <span class="bob">text</span> bold</strong></p>
-  <p><em>my life is kind of a mess!!</em></p>
-  my life is <strong><em>kind of a mess</em></strong>
-
   <hr>
 
-  <p>this is <a href="https://www.pexels.com">link </a>
-    <img src="woods.jpeg" alt="guy in the woods">
+  <p> <a href="https://www.pexels.com">link </a>
+    <img src="woods.jpeg" alt="person in the woods">
 </body>
 
 </html>
