--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
   <style>
     body {
-      background:#fedcba;
+      background:url(leaves-pattern.png), #fedcba;
+      background-blend-mode: multiply;
+      background-ckground-position: center
+     background-attachment: fixed;
       color: #F7A072;
       font-family: 'Special Elite', cursive;}
 
@@ -56,7 +59,7 @@
   <hr>
 
   <p> <a href="https://www.pexels.com">link </a>
-    <img src="woods.jpeg" alt="person in the woods">
+    <img src="woods.jpeg" alt=>
 </body>
 
 </html>
