--- a/image.html
+++ b/image.html
@@ -9,13 +9,18 @@
         border-radius: 20px;
         margin: 20px
       }
-      .purple {border-radius: 50%}
+      .purple-blob {border-radius: 50%;}
+      .jo {border-radius: 0%}
+      .ryan {border-radius: 12%;
+      margin:80px;
+    border:20px dashed black}
     </style>
   </head>
   <body>
 
   </body>
-  <img src="image.png" alt="purple people eater" class="purple blob">
-
-    <img src="image.png" alt="purple people eater">
+  <img src="image.png" alt="purple people eater" class="purple-blob">
+    <img src="image.png" alt="purple people eater" class="jo">
+    <img src="image.png" alt="purple people eater" class="ryan">
+      <img src="image.png" alt="purple people eater"class="toby">
 </html>
