--- a/image.html
+++ b/image.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>my images page</title>
     <style>
+    body {
+      background:url(tile-1.png);}
       img{
         border: 5px solid black;
         border-radius: 20px;
