--- a/image.html
+++ b/image.html
@@ -5,7 +5,7 @@
     <title>my images page</title>
     <style>
     body {
-      background:url(tile-1.png);}
+      background:url("pattern-1.png");}
       img{
         border: 5px solid black;
         border-radius: 20px;
