--- a/image.html
+++ b/image.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>my images page</title>
-    <style>
-    body {
-      background:url("pattern-1.png");}
-      img{
-        border: 5px solid black;
-        border-radius: 20px;
-        margin: 20px
-      }
-      .purple-blob {border-radius: 50%;}
-      .jo {border-radius: 0%}
-      .ryan {border-radius: 12%;
-      margin:80px;
-    border:20px dashed black}
-    </style>
-  </head>
-  <body>
 
-  </body>
-  <img src="image.png" alt="purple people eater" class="purple-blob">
-    <img src="image.png" alt="purple people eater" class="jo">
-    <img src="image.png" alt="purple people eater" class="ryan">
-      <img src="image.png" alt="purple people eater"class="toby">
+<head>
+  <meta charset="utf-8">
+  <title>my images page</title>
+  <style>
+    body {
+      background: url("pattern.png");
+    }
+
+    img {
+      border: 5px solid black;
+      border-radius: 20px;
+      margin: 20px
+    }
+
+    .purple-blob {
+      border-radius: 50%;
+    }
+
+    .jo {
+      border-radius: 0%
+    }
+
+    .ryan {
+      border-radius: 12%;
+      margin: 80px;
+      border: 20px dashed black
+    }
+  </style>
+</head>
+
+<body>
+
+</body>
+<img src="image.png" alt="purple people eater" class="purple-blob">
+<img src="image.png" alt="purple people eater" class="jo">
+<img src="image.png" alt="purple people eater" class="ryan">
+<img src="image.png" alt="purple people eater" class="toby">
+
 </html>
