--- a/image.html
+++ b/image.html
@@ -28,6 +28,12 @@
       margin: 80px;
       border: 20px dashed black
     }
+
+    .steve {
+      width: 500px;
+      height: 500px;
+      background: url("pattern.png");
+    }
   </style>
 </head>
 
@@ -39,4 +45,5 @@
 <img src="image.png" alt="purple people eater" class="ryan">
 <img src="image.png" alt="purple people eater" class="toby">
 
+<div class="steve"></div>
 </html>
