--- a/image.html
+++ b/image.html
@@ -32,7 +32,8 @@
     .steve {
       width: 500px;
       height: 500px;
-      background: url("pattern.png");
+      background: url("concrete-wall-2.png");
+
     }
   </style>
 </head>
