--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <li><a href="text.html">My text page</a></li>
       <li><a href="index.html">My index page</a></li>
       <li><a href="box.html">My box page</a></li>
+      <li><a href="image.html">My images page</a></li>
+
   </ul>
 
   <h1> Hi my name is Julia and this is my life (in a blog) </h1>
