--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <li><a href="index.html">My index page</a></li>
       <li><a href="box.html">My box page</a></li>
       <li><a href="image.html">My images page</a></li>
+      <li><a href="transforms.html">My transforms page</a></li>
 
   </ul>
 
