--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <li><a href="box.html">My box page</a></li>
       <li><a href="image.html">My images page</a></li>
       <li><a href="transforms.html">My transforms page</a></li>
-
+      <li><a href="gif.html">My gif page</a></li>
   </ul>
 
   <h1> Hi my name is Julia and this is my life (in a blog) </h1>
