--- a/index.html
+++ b/index.html
@@ -6,53 +6,60 @@
   <title>Julia's blog</title>
   <<link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
 
-  <style>
-    body {
-      background:url(leaves-pattern.png), #fedcba;
-      background-blend-mode: multiply;
-      background-ckground-position: center
-     background-attachment: fixed;
-      color: #F7A072;
-      font-family: 'Special Elite', cursive;}
+    <link rel="shortcut icon" href="favicon.ico" />
 
-      p {color: #F7A072;}
+    <style>
+      body {
+        background: url(leaves-pattern.png), #fedcba;
+        background-blend-mode: multiply;
+        background-ckground-position: center background-attachment: fixed;
+        color: #F7A072;
+        font-family: 'Special Elite', cursive;
+      }
 
-      .bob {color: black; font-size: 50px;}
+      p {
+        color: #F7A072;
+      }
 
-      ul  {list-style-type: none;
-      margin:0;
-    padding:0;
-  }
+      .bob {
+        color: black;
+        font-size: 50px;
+      }
 
-  a{
-    color:#F7A072;
-    text-decoration:none;
-    display:block;
-    background:#fedcba;
-    width:140px;
-    height: 20px;
-    margin:20px;
-    padding: 10px;
-    text-align: center;
-    border-radius:20px;
-    border:1px solid #667
- }
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
 
-  a:hover{
-    box-shadow:3px 3px 3px #667
-  }
+      a {
+        color: #F7A072;
+        text-decoration: none;
+        display: block;
+        background: #fedcba;
+        width: 140px;
+        height: 20px;
+        margin: 20px;
+        padding: 10px;
+        text-align: center;
+        border-radius: 20px;
+        border: 1px solid #667
+      }
 
-  </style>
+      a:hover {
+        box-shadow: 3px 3px 3px #667
+      }
+    </style>
 </head>
 
 <body>
   <ul>
     <li><a href="text.html">My text page</a></li>
-      <li><a href="index.html">My index page</a></li>
-      <li><a href="box.html">My box page</a></li>
-      <li><a href="image.html">My images page</a></li>
-      <li><a href="transforms.html">My transforms page</a></li>
-      <li><a href="gif.html">My gif page</a></li>
+    <li><a href="index.html">My index page</a></li>
+    <li><a href="box.html">My box page</a></li>
+    <li><a href="image.html">My images page</a></li>
+    <li><a href="transforms.html">My transforms page</a></li>
+    <li><a href="gif.html">My gif page</a></li>
   </ul>
 
   <h1> Hi my name is Julia and this is my life (in a blog) </h1>
