--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Julia's blog</title>
-  <<link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
+  <
+<link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
 
     <link rel="shortcut icon" href="favicon.ico" />
-
+<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
     <style>
       body {
         background: url(leaves-pattern.png), #fedcba;
@@ -60,6 +61,7 @@
     <li><a href="image.html">My images page</a></li>
     <li><a href="transforms.html">My transforms page</a></li>
     <li><a href="gif.html">My gif page</a></li>
+    <li><a href="Tables.html">My gif page</a></li>
   </ul>
 
   <h1> Hi my name is Julia and this is my life (in a blog) </h1>
