--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <li><a href="image.html">My images page</a></li>
     <li><a href="transforms.html">My transforms page</a></li>
     <li><a href="gif.html">My gif page</a></li>
-    <li><a href="Tables.html">My gif page</a></li>
+    <li><a href="Tables.html">My tables page</a></li>
+    <li><a href="seahorse.html">My seahorse page</a></li>
   </ul>
 
   <h1> Hi my name is Julia and this is my life (in a blog) </h1>
