--- a/seahorses2.html
+++ b/seahorses2.html
@@ -28,7 +28,7 @@
   <body>
     <div class="grid">
   <div id="title" class="span-col-2"><h1>Seahorse Serenity</h1></div>
-  <div> <img src="Seahoreses-4.jpg" alt="seahorses are great!!"></div>
+  <div> <img src="sh.jpg" alt="seahorses are great!!"></div>
   <div><li><a href="#">-Seahorse Home</a></li>
           <li><a href="#">-Seahorse News</a></li>
           <li><a href="#">-Seahorse Science</a></li>
