--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <li><a href="gif.html">My gif page</a></li>
     <li><a href="Tables.html">My tables page</a></li>
     <li><a href="seahorse.html">My seahorse page</a></li>
+    <li><a href="Julia/index.html">My mini site</a></li>
   </ul>
 
   <h1> Hi my name is Julia and this is my life (in a blog) </h1>
