--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
     <li><a href="gif.html">My gif page</a></li>
     <li><a href="Tables.html">My tables page</a></li>
     <li><a href="seahorse.html">My seahorse page</a></li>
-    <li><a href="Julia/index.html">My mini site</a></li>
+    <li><a href="julia/index.html">My mini site</a></li>
+    <li><a href="Finalportfolio/index.html">My Final Portfolio</a></li>
   </ul>
+
 
   <h1> Hi my name is Julia and this is my life (in a blog) </h1>
   <h3>My life is kind of a mess</h3>
